--- a/resources/res.qrc
+++ b/resources/res.qrc
@@ -3,4 +3,8 @@
         <file>qml/main.qml</file>
         <file>qml/Main/window.qml</file>
     </qresource>
+    <qresource prefix='/'>
+        <file>images/light/add.svg</file>
+        <file>images/dark/add.svg</file>
+    </qresource>
 </RCC>
