--- a/resources/res.qrc
+++ b/resources/res.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix='/'>
         <file>qml/main.qml</file>
+        <file>images/browser.svg</file>
     </qresource>
 </RCC>
